--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,11 @@
 {
-    "name": "guzzlehttp/uri-template",
+    "name": "joyparty/uri-template",
     "type": "library",
     "description": "A polyfill class for uri_template of PHP",
     "keywords": [
         "guzzlehttp",
         "uri-template"
     ],
-    "homepage": "https://github.com/guzzlehttp/uri-template",
     "license": "MIT",
     "authors": [
         {
@@ -30,21 +29,21 @@
         }
     ],
     "require": {
-        "php" : "^7.1 || ^8.0",
+        "php" : "^7.0 || ^8.0",
         "symfony/polyfill-php80": "^1.17"
     },
     "require-dev": {
-        "phpunit/phpunit" : "^7.5.15 || ^8.5 || ^9.3",
+        "phpunit/phpunit" : "^6.5.0 || ^7.5.15 || ^8.5 || ^9.3",
         "uri-template/tests": "1.0.0"
     },
     "autoload": {
         "psr-4": {
-            "GuzzleHttp\\UriTemplate\\": "src"
+            "JoyParty\\UriTemplate\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "GuzzleHttp\\UriTemplate\\Tests\\": "tests"
+            "JoyParty\\UriTemplate\\Tests\\": "tests"
         }
     },
     "extra": {
